Bug 1334981 - Backed out changeset d6ca24ba3673 for regression caused by bug 887718. r=enndeakin+6102

MozReview-Commit-ID: 9hIcRVRseO1